# CAFA-evaluator

./: .gitattributes  .gitignore  CHANGELOG.md  LICENCE.md  README.md  pyproject.toml  setup.py
cafa/: __init__.py  evaluation.py
cafa.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  top_level.txt
src/: evaluation.py  graph.py  ia.ipynb  main.py  parser.py  plot.ipynb  plot.py  pred_cleaner.py  prediction_parser.py
src/cafaeval/: __main__.py  evaluation.py  graph.py  parser.py
src/cafaeval/data/example/: IDPO_disorder_function.obo  ground_truth.tsv
src/cafaeval/data/example/predictions/: pred_1.tsv  pred_2.tsv  pred_3.tsv  pred_4.tsv  pred_5.tsv
